[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/circle.png" type="Texture" id=1]
[ext_resource path="res://assets/1px.png" type="Texture" id=2]
[ext_resource path="res://scripts/Player.gd" type="Script" id=3]
[ext_resource path="res://scripts/Limb.gd" type="Script" id=4]
[ext_resource path="res://assets/light.png" type="Texture" id=5]
[ext_resource path="res://assets/light-cone.png" type="Texture" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 1.68639

[sub_resource type="CapsuleShape2D" id=2]
radius = 2.31838
height = 8.7621

[sub_resource type="CapsuleShape2D" id=3]
radius = 1.0908
height = 5.43092

[sub_resource type="CapsuleShape2D" id=4]
radius = 0.792665
height = 6.38399

[sub_resource type="CircleShape2D" id=5]
radius = 1.45371

[sub_resource type="CapsuleShape2D" id=6]
radius = 1.06483
height = 5.599

[sub_resource type="CapsuleShape2D" id=7]
radius = 0.795671
height = 6.31237

[sub_resource type="CircleShape2D" id=8]
radius = 1.36138

[sub_resource type="CapsuleShape2D" id=9]
radius = 1.24882
height = 6.29995

[sub_resource type="CapsuleShape2D" id=10]
radius = 1.01589
height = 6.88226

[sub_resource type="CircleShape2D" id=11]
radius = 1.39448

[sub_resource type="CapsuleShape2D" id=12]
radius = 1.30647
height = 6.07974

[sub_resource type="CapsuleShape2D" id=13]
radius = 1.07343
height = 7.03495

[sub_resource type="CircleShape2D" id=14]
radius = 1.38406

[node name="Player" type="Node2D" groups=[
"player",
]]
script = ExtResource( 3 )

[node name="Head" type="RigidBody2D" parent="." groups=[
"body",
]]
position = Vector2( 0.387314, -9.68317 )
mass = 3.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Head"]
texture = ExtResource( 1 )

[node name="Headlamp" type="Sprite" parent="Head" groups=[
"unshaded",
]]
position = Vector2( 0, -2 )
texture = ExtResource( 2 )

[node name="PinJoint2D" type="PinJoint2D" parent="Head"]
position = Vector2( 0.004, 0.019 )
node_a = NodePath("..")
node_b = NodePath("../../Torso")
disable_collision = false

[node name="Light2D" type="Light2D" parent="Head"]
rotation = -0.785397
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
color = Color( 0.811765, 0.713726, 0.0588235, 1 )
energy = 1.5
mode = 2
shadow_enabled = true

[node name="Torso" type="RigidBody2D" parent="." groups=[
"body",
"torso",
]]
position = Vector2( 0.39431, -0.261475 )
mass = 10.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Torso"]
position = Vector2( 0.00122833, 0 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Torso"]
position = Vector2( 0.0210419, 0.131691 )
scale = Vector2( 4.34605, 9.02873 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="Torso"]
position = Vector2( 0.0587883, -4.56621 )
scale = Vector2( 0.858009, 0.860134 )
texture = ExtResource( 1 )

[node name="Sprite3" type="Sprite" parent="Torso"]
position = Vector2( 0.019413, 4.15819 )
scale = Vector2( 0.858009, 0.860134 )
texture = ExtResource( 1 )

[node name="LeftArmPin" type="PinJoint2D" parent="Torso"]
position = Vector2( -2.40521, -5.78607 )
node_a = NodePath("..")
node_b = NodePath("../../ArmLeft/ArmLeftUpper")

[node name="RightArmPin" type="PinJoint2D" parent="Torso"]
position = Vector2( 2.35855, -5.82544 )
node_a = NodePath("..")
node_b = NodePath("../../ArmRight/ArmRightUpper")

[node name="LeftLegPin" type="PinJoint2D" parent="Torso"]
position = Vector2( -1.25, 5.40625 )
node_a = NodePath("..")
node_b = NodePath("../../LegLeft/LegLeftUpper")

[node name="RightLegPin" type="PinJoint2D" parent="Torso"]
position = Vector2( 1.25, 5.4375 )
node_a = NodePath("..")
node_b = NodePath("../../LegRight/LegRightUpper")

[node name="Light2D2" type="Light2D" parent="Torso"]
texture = ExtResource( 5 )
energy = 0.75
mode = 2
shadow_enabled = true
shadow_gradient_length = 10.0
shadow_filter = 1
shadow_filter_smooth = 10.0

[node name="ArmRight" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="ArmRightUpper" type="RigidBody2D" parent="ArmRight"]
position = Vector2( 4.22731, -8.89087 )
rotation = 0.442789
mass = 2.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="ArmRight/ArmRightUpper"]
position = Vector2( -0.011592, 0.0102808 )
scale = Vector2( 1.84833, 7.4525 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ArmRight/ArmRightUpper"]
position = Vector2( -0.0371399, 0.0371704 )
shape = SubResource( 3 )

[node name="PinJoint2D" type="PinJoint2D" parent="ArmRight/ArmRightUpper"]
position = Vector2( -0.0209656, -3.23634 )
node_a = NodePath("..")
node_b = NodePath("../../ArmRightLower")

[node name="ArmRightLower" type="RigidBody2D" parent="ArmRight"]
position = Vector2( 4.62531, -15.1329 )
rotation = -0.321633
mass = 2.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="ArmRight/ArmRightLower"]
position = Vector2( -0.0306702, 0.000946045 )
scale = Vector2( 1.36748, 7.76118 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ArmRight/ArmRightLower"]
position = Vector2( -0.0371399, 0.0371704 )
shape = SubResource( 4 )

[node name="PinJoint2D" type="PinJoint2D" parent="ArmRight/ArmRightLower"]
position = Vector2( -0.0526657, -4.36866 )
node_a = NodePath("..")
node_b = NodePath("../../HandRight")

[node name="HandRight" type="RigidBody2D" parent="ArmRight"]
position = Vector2( 3.12431, -19.2148 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="ArmRight/HandRight"]
scale = Vector2( 2.15623, 2.15623 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ArmRight/HandRight"]
shape = SubResource( 5 )

[node name="ArmLeft" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="ArmLeftUpper" type="RigidBody2D" parent="ArmLeft"]
position = Vector2( -3.1927, -9.07028 )
rotation = -0.388551
mass = 2.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="ArmLeft/ArmLeftUpper"]
position = Vector2( -0.011592, 0.0102808 )
scale = Vector2( 1.84833, 7.4525 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ArmLeft/ArmLeftUpper"]
position = Vector2( -0.0371399, 0.0371704 )
shape = SubResource( 6 )

[node name="PinJoint2D" type="PinJoint2D" parent="ArmLeft/ArmLeftUpper"]
position = Vector2( -0.0209656, -3.23634 )
node_a = NodePath("..")
node_b = NodePath("../../ArmLeftLower")

[node name="ArmLeftLower" type="RigidBody2D" parent="ArmLeft"]
position = Vector2( -3.48569, -15.251 )
rotation = 0.313103
mass = 2.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="ArmLeft/ArmLeftLower"]
position = Vector2( -0.0306702, 0.000946045 )
scale = Vector2( 1.36748, 7.76118 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ArmLeft/ArmLeftLower"]
position = Vector2( -0.0371399, 0.0371704 )
shape = SubResource( 7 )

[node name="PinJoint2D" type="PinJoint2D" parent="ArmLeft/ArmLeftLower"]
position = Vector2( -0.0526657, -4.36866 )
node_a = NodePath("..")
node_b = NodePath("../../HandLeft")

[node name="HandLeft" type="RigidBody2D" parent="ArmLeft"]
position = Vector2( -2.19069, -19.4117 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="ArmLeft/HandLeft"]
scale = Vector2( 2.15623, 2.15623 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ArmLeft/HandLeft"]
shape = SubResource( 8 )

[node name="LegLeft" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="LegLeftUpper" type="RigidBody2D" parent="LegLeft"]
position = Vector2( -2.42869, 8.32783 )
rotation = -2.73406
mass = 3.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="LegLeft/LegLeftUpper"]
position = Vector2( -0.011592, 0.0102808 )
scale = Vector2( 2.12408, 8.22218 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LegLeft/LegLeftUpper"]
position = Vector2( -0.0371399, 0.0371704 )
shape = SubResource( 9 )

[node name="PinJoint2D" type="PinJoint2D" parent="LegLeft/LegLeftUpper"]
position = Vector2( -0.0209656, -3.23634 )
node_a = NodePath("..")
node_b = NodePath("../../LegLeftLower")

[node name="LegLeftLower" type="RigidBody2D" parent="LegLeft"]
position = Vector2( -4.28619, 15.0612 )
rotation = -2.99939
mass = 2.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="LegLeft/LegLeftLower"]
position = Vector2( -0.0306702, 0.000946045 )
scale = Vector2( 1.70635, 8.55641 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LegLeft/LegLeftLower"]
position = Vector2( -0.0371399, 0.0371704 )
shape = SubResource( 10 )

[node name="PinJoint2D" type="PinJoint2D" parent="LegLeft/LegLeftLower"]
position = Vector2( -0.0526657, -4.36866 )
node_a = NodePath("..")
node_b = NodePath("../../FootLeft")

[node name="FootLeft" type="RigidBody2D" parent="LegLeft"]
position = Vector2( -5.19109, 19.5883 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="LegLeft/FootLeft"]
scale = Vector2( 2.15623, 2.15623 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LegLeft/FootLeft"]
shape = SubResource( 11 )

[node name="LegRight" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="LegRightUpper" type="RigidBody2D" parent="LegRight"]
position = Vector2( 3.22731, 8.64033 )
rotation = 2.82843
mass = 3.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="LegRight/LegRightUpper"]
position = Vector2( -0.011592, 0.0102808 )
scale = Vector2( 2.12408, 8.22218 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LegRight/LegRightUpper"]
position = Vector2( -0.0371399, 0.0371704 )
shape = SubResource( 12 )

[node name="PinJoint2D" type="PinJoint2D" parent="LegRight/LegRightUpper"]
position = Vector2( -0.0209656, -3.23634 )
node_a = NodePath("..")
node_b = NodePath("../../LegRightLower")

[node name="LegRightLower" type="RigidBody2D" parent="LegRight"]
position = Vector2( 4.76231, 15.3118 )
rotation = 2.95918
mass = 2.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="LegRight/LegRightLower"]
position = Vector2( -0.0306702, 0.000946045 )
scale = Vector2( 1.70635, 8.55641 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LegRight/LegRightLower"]
position = Vector2( -0.0371399, 0.0371704 )
shape = SubResource( 13 )

[node name="PinJoint2D" type="PinJoint2D" parent="LegRight/LegRightLower"]
position = Vector2( -0.0526657, -4.36866 )
node_a = NodePath("..")
node_b = NodePath("../../FootRight")

[node name="FootRight" type="RigidBody2D" parent="LegRight"]
position = Vector2( 5.80931, 19.6875 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="LegRight/FootRight"]
scale = Vector2( 2.15623, 2.15623 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LegRight/FootRight"]
shape = SubResource( 14 )
